# pipeman

./: .gitignore  Cargo.toml  README.md
configs/: all-in-one.ini  config.toml  multinode.ini  uswift.ign
src/: main.rs
src/common/: args.rs  command.rs  config.rs  exception.rs  log.rs  mod.rs  remote.rs  utils.rs  worker.rs
src/libvirt/: config.rs  device.rs  enumerations.rs  guest.rs  mod.rs
src/libvirt/xml/aarch64/: mine.xml  real.xml
src/libvirt/xml/x86_64/: iso.xml  mine.xml  qcow2.xml  real.xml
src/openstack/: request.rs
src/openstack/models/: auth.rs  image.rs  mod.rs  network.rs  server.rs  volume.rs
