[package]
name = "pipeman"
version = "1.0.0"
edition = "2021"

[dependencies]
quick-xml = { version = "0.31.0", features = ["serialize", "serde-types"] }
serde = { version = "1.0.197", features = ["derive"] }
strum = { version = "0.26.2", features = ["strum_macros", "derive"] }
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.3", features = ["json"] }
serde_json = "1.0.115"
config = "0.14.0"
ssh2 = "0.9.4"
log = { version = "0.4.21", features = ["std", "serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2.3"
time = { version = "0.3.36", features = ["macros"] }
thiserror = "1.0.58"
futures = "0.3.30"
clap = { version = "4.5.4", features = ["derive"] }
clap_derive = "4.5.4"
once_cell = "1.19.0"
rust-ini = "0.21.0"
chrono = "0.4.38"
crossbeam = "0.8.4"
